--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+        </dependency>
     </dependencies>
 
 
